Use correct method to get the Path from a jar on windows ()