@@ -33,7 +33,6 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.List;
 import java.util.Random;
@@ -420,7 +419,7 @@ public class ProcedureJarLoaderTest
         return new JarBuilder().createJarFor( testDirectory.createFile( new Random().nextInt() + ".jar" ), targets );
     }
 
-    private URL createMrJarFor( Runtime.Version version, Class<?>... targets ) throws IOException
+    private URL createMrJarFor( Runtime.Version version, Class<?>... targets ) throws IOException, URISyntaxException
     {
         String versionPrefix = String.format( "META-INF/versions/%d/", version.feature() );
         var manifest = new Manifest();
@@ -451,7 +450,7 @@ public class ProcedureJarLoaderTest
                 }
             }
 
-            Path previousJarFile = testDirectory.file( Paths.get( jar.getPath() ).getFileName().toString() );
+            Path previousJarFile = testDirectory.file( Path.of( jar.toURI() ).getFileName().toString() );
             Files.deleteIfExists( previousJarFile );
         }
 
